--- a/behat/behat.local.yml.example
+++ b/behat/behat.local.yml.example
@@ -3,5 +3,5 @@ default:
     Behat\MinkExtension:
       base_url: "https://app.shoov.io"
       selenium2:
-        wd_host: 'http://192.168.59.103:4470/wd/hub'
+        wd_host: 'http://<your-internal-ip>:4470/wd/hub'
         browser: chrome
